--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /.idea/PianoProject.iml
 /.idea/inspectionProfiles/profiles_settings.xml
 /.idea/inspectionProfiles/Project_Default.xml
+/.idea/vcs.xml
